assets/css/style.css
:root{
  --myBlue: #5192bd;
}
* {
  padding: 0;
  margin: 0;
  color: var(--myBlue);
  font-family: "Rubik", Verdana, Geneva, Tahoma, sans-serif;
}
.Littlefield::before{
  content: "The Littlefield ";
}
body {
  background-image: url("../images/city-at-night.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: cover;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  color: #a1d3f5;
  font-family: Verdana;
}

h2 {
  padding-bottom: 1em;
}

.box_styling {
  padding: 30px;
  margin: 50px;

  /* border: 1px solid black; */
  border-radius: 10px;
  background-color: rgba(0, 0, 0, 0.900);
  box-shadow: 5px 10px 8px rgba(136, 199, 247, 0.463);
width: auto;
}

.full-document-column-1 {
  flex: 1;
width: fit-content;

}

.full-document-column-2 {
  flex: 2;
  width: fit-content;
}

/* Header */
.header-shadow_effect {

  box-shadow: 0px 8px 6px 0px rgba(136, 199, 247, 0.463);

}

header {
  display: flex;
  padding: 10px;
  /*set items to right side*/
  justify-content: flex-end;
  /*vertical alignment  */
  align-items: center;
  color: rgb(39, 35, 35);
  background-color: #000000;
  position: sticky;
  top: 0;
  z-index: 100;
}

/* Navigation */
.header-nav-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  
}


nav {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  padding: 20px;
  justify-content: space-around;
  
}

nav div {
  margin: 10px;
}

nav a {
  font-size: 20px;
  font-weight: bold;
  color: var(--myBlue);
  text-decoration: none;
}

/* Main */

main {
  display: flex;
  align-items: top;

}

.flex-container-1 {

  flex-grow: 1;
}

.flex-container-2 {
 
  flex-grow: 2;
}

/* Professional Details */
.professional_details__box {
  flex-basis: auto;
}

.professional_details__box h2 {
  padding: 10px;
  text-align: center;
}

.professional_details__box img {
  width: 100%;
  border-radius: 5px;
}

.professional_details__box ul {
  text-align: left;
  list-style: none;
}

.professional_details__box li:nth-child(odd) {
  /*use selector class to bold every ODD */
  padding-top: 10px;
  font-weight: bold;
}
/* CV Button */
.professional_details__box a:link, a:visited {
  font-size: 10px;
  background-color: #1f3065;
  color: white;
  text-align: center;
  text-decoration: none;
  display: inline-block;

  border-radius: 100px;
  margin: 5px 5px 5px 5px;
  padding: 12px 30px 12px 30px;
  box-shadow: 0 8px 6px -6px rgb(52, 228, 237);
}

.professional_details__box a:hover, a:active {
  background-color: rgb(37, 199, 248);
}
.professional_details__CV {
  padding-top:20px;
}

/* COLUMN2 STYLING */

/* Sections Container */
.section{
  display:flex;
  flex-direction: column;
  
}
/* Modify section items */
section div{

flex-basis: 2%;
padding: 5px;
margin-bottom: 20px;

}
/* ABOUT ME */


/* MY WORK */
article {
  display: flex;
 
  word-break: break-word;
  }
  
  figure{
    
      justify-content:space-arund;
      align-items: stretch;
      padding: 5px;
      width: 20%;
  }
  figure  h3,h4{
      text-align: center;
  }
  figure a{
      text-decoration: none;
  }
  figure img{
  display:block;
  width: 100%;
  }
  figure p{
    padding-top: 10px;
    
        width: 100%;
    }
  
  #showcase{
      display: flex;
      
  }
   #showcase figure:nth-of-type(1) {flex-grow: 4;}
   #showcase figure:nth-of-type(2) {flex-grow: 1;}
   #showcase figure:nth-of-type(3) {flex-grow: 1;}
   #showcase figure:nth-of-type(4) {flex-grow: 1;}
/* Contact */
form {
  text-align: center;

}

fieldset {
  border: 0;
  margin: 0;
  padding: 0;
}

.contact-form input,
.contact-form textarea {
  background-color: rgb(219, 230, 252);
  border: 0;
  outline: 0;
  display: block;
  width: 100%;
  margin-top: 1em;
  padding: 0.8em;
  font-family: "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial,
    sans-serif;
  font-weight: 300;
  font-size: 14px;
  border-radius: 6px;
  box-shadow: 0 1px 1px rgba(34, 34, 34, 0.1);
  resize: none;
}

.contact-form textarea {
  margin-bottom: 1em;
  height: 125px;
}

.contact-form input:focus {
  box-shadow: 0 0px 2px rgba(3, 201, 169, 1) !important;
}

.contact-form textarea:focus {
  box-shadow: 0 0px 2px rgba(3, 201, 169, 1) !important;
}

#submit {
  color: #36454f;
  background-color: #bfbfbf;
  cursor: pointer;
  font-weight: 400;
}

#submit:hover {
  background-color: rgba(3, 201, 169, 0.6);
}

/* Footer */
footer {
  padding: 10px;
  background-color: #20262e;
  font-size: 18px;
  text-align: center;
}

/* Responsive */
@media (max-width: 860px) {
  .full-document-container {
    display: flex;
    flex-flow: column wrap;

  }
  .header-nav-container{
    flex-flow:column;
  }
}
@media (max-width: 1000px) {
 #showcase {
    display: flex;
    align-items: center;
    flex-flow: column;
    
    }
    figure {
      width: 100%
    }
    #showcase figure:nth-of-type(2) {width: 80%;}
    #showcase figure:nth-of-type(3) {width: 80%;}
    #showcase figure:nth-of-type(4) {width: 80%;}

}

